compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__unqualified_using_private_constructo.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 151
expression: "import one.{Two}\n\npub fn main() {\n  Two\n}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{Two}
  │             ^^^

The module `one` does not have a `Two` field.

